--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="product">Product</string>
     <string name="add">Add</string>
     <string name="profile">Profile</string>
+    <string name="report">report</string>
+    <string name="settings">settings</string>
+    <string name="logout">Logout</string>
+    <string name="menu">Menu</string>
 </resources>
